tests/negative/scope/aliasing-object-from-unknown-package-imported/err.expected
ERROR:
There is no package named `gamma`, but it was referenced at beta.smol:3:8-3:13:
         2 | 
         3 | import gamma:Foo;
           |        ^^^^^
         4 | 
